--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,25 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8070:8070"
+      - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       - mongo
+    networks:
+      - app-network
 
   mongo:
     image: mongo:latest
     ports:
       - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - app-network
+
+volumes:
+  mongo_data:
+
+networks:
+  app-network:
