added caching using redis

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=8000
-MONGO_URI= mongodb://mongo:27017
-DB_COLLECTION = "cluster1"
+MONGO_URI=mongodb://mongo:27017
+DB_COLLECTION=cluster1
+REDIS_ADDR=redis:6379
+REDIS_PASSWORD=
